# simply-cpp

./: .gitignore  CMakeLists.txt  README.md  sc.h
include/: color.h  date.h  dual.h  matrix.h  ollama.h  postgres.h  rect.h  rest.h  timer.h
src/: base64.cpp  base64.h  color.cpp  date.cpp  ollama.cpp  postgres.cpp  rect.cpp  rest.cpp  rjr.cpp  rjr.h  sc.cpp  timer.cpp
test/: base64.cpp  color.cpp  date.cpp  dual.cpp  ollama.cpp  postgres.cpp  rest.cpp  timer.cpp
